Update Chinese translations

--- a/CaptureSight-Applet/romfs/i18n/chs.json
+++ b/CaptureSight-Applet/romfs/i18n/chs.json
@@ -1,5 +1,54 @@
 {
-  "app": {},
+  "app": {
+    "Active dens": "活跃的巢穴",
+    "Advances to next shiny": "到下个异色的帧数",
+    "All dens": "所有巢穴",
+    "Continue": "继续",
+    "EVs": "努力值",
+    "Find raid seed": "检索团体战种子",
+    "Misc": "杂项",
+    "Move 1": "招式 1",
+    "Move 2": "招式 2",
+    "Move 3": "招式 3",
+    "Move 4": "招式 4",
+    "Moves": "招式",
+    "Multiplier": "倍率",
+    "Note: This will take a lot of time and cannot be used on shiny or event Pokemon.  The console will appear frozen while searching (this will be fixed in the future).": "注 : 这可能需要大量时间且不能用在检索异色或活动宝可梦上。主机会在检索开始后停止响应一段时间（将在未来版本中修复）",
+    "Raid": "团体战",
+    "Raid Seed": "团体战种子",
+    "Press A to view raid seed": "按A来查看团体战种子",
+    "Seed found": "找到种子",
+    "Shiny type": "异色类型",
+    "Trade": "交换",
+    "Weaknesses": "弱点",
+    "Weakness": "弱点",
+    "Wild": "野生",
+    "Egg cycles": "孵蛋圈数",
+    "OT Gender": "初训家性别",
+    "Male": "男",
+    "Female": "女",
+    "Misc Pokemon": "杂项宝可梦",
+    "Party Pokemon": "同行宝可梦",
+    "Box Pokemon": "盒子宝可梦",
+    "Party": "同行",
+    "Shiny": "异色",
+    "Star": "星星",
+    "Square": "方块",
+    "Event": "活动",
+    "Nature": "性格",
+    "Minted Nature": "薄荷性格",
+    "Ability": "特性",
+    "Friendship": "亲密度",
+    "EC": "加密常数",
+    "PID": "PID",
+    "IVs": "个体值",
+    "HP": "HP",
+    "ATK": "攻击",
+    "DEF": "防御",
+    "SPA": "特攻",
+    "SPD": "特防",
+    "SPE": "速度"
+  },
   "natures": {
     "Hardy": "勤奋",
     "Lonely": "怕寂寞",
