--- a/CaptureSight-Applet/romfs/i18n/cht.json
+++ b/CaptureSight-Applet/romfs/i18n/cht.json
@@ -1,5 +1,54 @@
 {
-  "app": {},
+  "app": {
+    "Active dens": "活躍的巢穴",
+    "Advances to next shiny": "到下個異色的幀數",
+    "All dens": "所有巢穴",
+    "Continue": "繼續",
+    "EVs": "努力值",
+    "Find raid seed": "檢索團體戰種子",
+    "Misc": "雜項",
+    "Move 1": "招式 1",
+    "Move 2": "招式 2",
+    "Move 3": "招式 3",
+    "Move 4": "招式 4",
+    "Moves": "招式",
+    "Multiplier": "倍率",
+    "Note: This will take a lot of time and cannot be used on shiny or event Pokemon.  The console will appear frozen while searching (this will be fixed in the future).": "註 : 這可能需要大量時間且不能用在檢索異色或活動寶可夢上。主機會在檢索開始後停止響應壹段時間（將在未來版本中修復）",
+    "Raid": "團體戰",
+    "Raid Seed": "團體戰種子",
+    "Press A to view raid seed": "按A來查看團體戰種子",
+    "Seed found": "找到種子",
+    "Shiny type": "異色類型",
+    "Trade": "交換",
+    "Weaknesses": "弱點",
+    "Weakness": "弱點",
+    "Wild": "野生",
+    "Egg cycles": "孵蛋圈數",
+    "OT Gender": "初訓家性別",
+    "Male": "男",
+    "Female": "女",
+    "Misc Pokemon": "雜項寶可夢",
+    "Party Pokemon": "同行寶可夢",
+    "Box Pokemon": "盒子寶可夢",
+    "Party": "同行",
+    "Shiny": "異色",
+    "Star": "星星",
+    "Square": "方塊",
+    "Event": "活動",
+    "Nature": "性格",
+    "Minted Nature": "薄荷性格",
+    "Ability": "特性",
+    "Friendship": "親密度",
+    "EC": "加密常數",
+    "PID": "PID",
+    "IVs": "個體值",
+    "HP": "HP",
+    "ATK": "攻擊",
+    "DEF": "防禦",
+    "SPA": "特攻",
+    "SPD": "特防",
+    "SPE": "速度"
+  },
   "natures": {
     "Hardy": "勤奮",
     "Lonely": "怕寂寞",
