More German translation

--- a/CaptureSight-Applet/romfs/i18n/de.json
+++ b/CaptureSight-Applet/romfs/i18n/de.json
@@ -1,5 +1,54 @@
 {
-  "app": {},
+  "app": {
+    "Active dens": "Aktive Nester",
+    "Advances to next shiny": "Frames bis zum nächsten Shiny",
+    "All dens": "Alle Nester",
+    "Continue": "Fortsetzen",
+    "EVs": "FP",
+    "Find raid seed": "Raid-Seed suchen",
+    "Misc": "Etc",
+    "Move 1": "Attacke 1",
+    "Move 2": "Attacke 2",
+    "Move 3": "Attacke 3",
+    "Move 4": "Attacke 4",
+    "Moves": "Attacken",
+    "Multiplier": "Multiplikator",
+    "Note: This will take a lot of time and cannot be used on shiny or event Pokemon.  The console will appear frozen while searching (this will be fixed in the future).": "Achtung: Diese Aktion kann lange dauern und kann nicht auf schillernde oder Event-Pokemon angewandt werden. Die Konsole friert aktuell während des Suchvorgangs ein.",
+    "Raid": "Raid",
+    "Raid Seed": "Raid-Seed",
+    "Press A to view raid seed": "Drücke A um den Raid-Seed zu sehen",
+    "Seed found": "Seed gefunden",
+    "Shiny type": "Schillernder Typ",
+    "Trade": "Tauschen",
+    "Weaknesses": "Schwächen",
+    "Weakness": "Schwäche",
+    "Wild": "Wild",
+    "Egg cycles": "Ei-Zyklen",
+    "OT Gender": "OT Geschlecht",
+    "Male": "Männlich",
+    "Female": "Weiblich",
+    "Misc Pokemon": "Andere Pokémon",
+    "Party Pokemon": "Party Pokémon",
+    "Box Pokemon": "Box Pokémon",
+    "Party": "Party",
+    "Shiny": "Schillernd",
+    "Star": "Stern",
+    "Square": "Quadrat",
+    "Event": "Event",
+    "Nature": "Wesen",
+    "Minted Nature": "Minz-Wesen",
+    "Ability": "Fähigkeit",
+    "Friendship": "Freundschaft",
+    "EC": "EC",
+    "PID": "PID",
+    "IVs": "DVs",
+    "HP": "KP",
+    "ATK": "ANG",
+    "DEF": "VER",
+    "SPA": "SPANG",
+    "SPD": "SPVER",
+    "SPE": "INIT"
+  },
   "natures": {
     "Hardy": "Robust",
     "Lonely": "Solo",
